--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<li><a href="">Товары</a></li>
 						<li><a href="">О_нас</a></li>
 						<li><a href="">Контакты</a></li>
-						<li class="all">2014 &copy All rights reserved</li>
+						<li class="all">2014 &copy; All rights reserved</li>
 					</ul>
 				</div>
 			</div>
