--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 	<head>
         <meta charset="UTF-8">
         <title>Fitness</title>
-		<link rel="stylesheet" type="text/css" href="css/reset.css">
-		<link rel="stylesheet" type="text/css" href="css/styles.css">
+		<link rel="stylesheet"  href="css/reset.css">
+		<link rel="stylesheet"  href="css/styles.css">
 	</head>
 	
         <body>
 			<div class="site_str1">
 				<div class="header1">
-					<img src="img/logo1.gif" alt="Fitness">
+					<img src="img/logo.gif" alt="Fitness">
 					<ul class="menu1">
 						<li><a href="">Главная</a></li>
 						<li><a href="">Товары</a></li>
@@ -18,7 +18,6 @@
 						<li><a href="">Контакты</a></li>
 					</ul>
 				</div>
-				<div class="container1">
 					<ul class="satebar">
 						<li><a href="">Ноутбуки</a></li>
 						<li><a href="">Планшеты</a></li>
@@ -28,20 +27,17 @@
 						<li><a href="">Автотовары</a></li>
 					</ul>
 					<div class="content">
-						<img src="img/img2.gif" alt="Велосипед">
+						<img src="img/thebike.gif" alt="Велосипед">
 						<p> Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus , які використовували різні версії Lorem Ipsum.
 						</p>
 					</div>
-				</div>
-				<div class="footer1">
 					<ul class="menu2">
 						<li><a href="">Главная</a></li>
 						<li><a href="">Товары</a></li>
 						<li><a href="">О_нас</a></li>
 						<li><a href="">Контакты</a></li>
-						<li class="all">2014 &copy All rights reserved</li>
+						<li class="all">2014 &copy; All rights reserved</li>
 					</ul>
-				</div>
 			</div>
 
         </body>
